Edit folder structure

--- a/src/server/InternshipRecords.Web/InternshipRecords.Web.csproj
+++ b/src/server/InternshipRecords.Web/InternshipRecords.Web.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\InternshipRecords.Infrastructure\InternshipRecords.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
