--- a/src/server/InternshipRecords.Web/Properties/launchSettings.json
+++ b/src/server/InternshipRecords.Web/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "http": {
       "commandName": "Project",
+      "workingDirectory": "$(ProjectDir)",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -10,6 +11,5 @@
       "applicationUrl": "http://localhost:5001"
     }
   },
-
   "$schema": "https://json.schemastore.org/launchsettings.json"
 }
