feat: add repositories

--- a/src/server/InternshipRecords.Infrastructure/InternshipRecords.Infrastructure.csproj
+++ b/src/server/InternshipRecords.Infrastructure/InternshipRecords.Infrastructure.csproj
@@ -16,7 +16,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\client\InternshipRecords.Client\InternshipRecords.Client.csproj" />
     <ProjectReference Include="..\InternshipRecords.Domain\InternshipRecords.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Mvc.Core">
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\9.0.7\ref\net9.0\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
