--- a/src/server/InternshipRecords.Application/InternshipRecords.Application.csproj
+++ b/src/server/InternshipRecords.Application/InternshipRecords.Application.csproj
@@ -6,4 +6,22 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Intern\AddIntern\" />
+    <Folder Include="Features\Intern\UpdateIntern\" />
+    <Folder Include="Features\Intern\DeleteIntern\" />
+    <Folder Include="Features\Intern\GetInterns\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="MediatR.Extensions.FluentValidation.AspNetCore" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InternshipRecords.Infrastructure\InternshipRecords.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
