--- a/src/server/InternshipRecords.Web/appsettings.json
+++ b/src/server/InternshipRecords.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Host=localhost;Port=5434;Database=interns;Username=postgres;Password=postgres"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;Port=5432;Database=interns;Username=postgres;Password=postgres"
+  }
 }
