--- a/src/server/InternshipRecords.Application/InternshipRecords.Application.csproj
+++ b/src/server/InternshipRecords.Application/InternshipRecords.Application.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.csproj" />
     <ProjectReference Include="..\InternshipRecords.Infrastructure\InternshipRecords.Infrastructure.csproj" />
   </ItemGroup>
 
