--- a/src/client/InternshipRecords.Client/InternshipRecords.Client.csproj
+++ b/src/client/InternshipRecords.Client/InternshipRecords.Client.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
