--- a/src/client/InternshipRecords.Client/InternshipRecords.Client.csproj
+++ b/src/client/InternshipRecords.Client/InternshipRecords.Client.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
