--- a/src/server/InternshipRecords.Domain/InternshipRecords.Domain.csproj
+++ b/src/server/InternshipRecords.Domain/InternshipRecords.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
